fix: viewer tools should be behind modals backdrop

--- a/src/discrete-layer/views/discrete-layer-view.css
+++ b/src/discrete-layer/views/discrete-layer-view.css
@@ -220,11 +220,11 @@ body[dir='rtl'] .sideDetailsPanel {
 }
 
 .cesium-viewer .sideToolsContainer {
-  z-index: 5;
+  z-index: 0;
 }
 
 .cesium-viewer-fullscreenContainer , .cesium-viewer .toolsContainer {
-  z-index: 5;
+  z-index: 0;
 }
 
 
